[package]
name = "mynes"
version = "0.1.0"
authors = ["F35 <f35idk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pixel_renderer]
path = "../pixel_renderer"

[dependencies.xcb-util]
version = "0.3.0"
default-features = false
features = ["keysyms"]

[features]
logging = []
