[package]
name = "pixel_renderer"
version = "0.1.0"
authors = ["F35 <f35idk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ash]
version = "0.30.0"

[dependencies.xcb]
version = "0.9.0"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic="abort"
lto = true
codegen-units = 1
